--- a/package.json
+++ b/package.json
@@ -101,9 +101,13 @@
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
     "less-loader": "^11.1.3",
+    "rc-virtual-list": "^3.11.3",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.16.0",
+    "solarlunar": "^2.0.7"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
