--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
-    "solarlunar": "^2.0.7"
+    "solarlunar": "^2.0.7",
+    "sqlite3": "5.1.7-rc.0"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
