--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     }
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "antd": "^5.12.1",
     "dayjs": "^1.11.10",
     "electron-debug": "^3.2.0",
